syntax = "proto3";

package simpleGuide;

option go_package = "grpc/proto";

message Participant{
  string id = 1;
  string name = 2;
}

message ChatMessage {
  string id = 1;
  Participant participant = 2;
  string message = 3;
  int64 timestamp = 4;
}

message Connect{
  Participant participant = 1;
  bool active = 2;
}

message Empty {}

service StreamingService {
  rpc GetChatMessageStreaming(Connect) returns (stream ChatMessage);
  rpc SendChatMessage(ChatMessage) returns (Empty);
}